refactor(storybook): improve testing config in pipeline

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -68,6 +68,14 @@
       },
       "defaultConfiguration": "headless",
       "configurations": {
+        "ci": {
+          "forbidOnly": true,
+          "globalTimeout": 30000,
+          "headed": false,
+          "quiet": true,
+          "passWithNoTests": false,
+          "skipInstall": true
+        },
         "headless": {
           "headed": false
         },
