refactor: adjust action timeout

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -73,8 +73,7 @@
           "headed": false,
           "quiet": true,
           "passWithNoTests": false,
-          "skipInstall": true,
-          "timeout": 30000
+          "skipInstall": true
         },
         "headless": {
           "headed": false
