refactor(storybook): improve testing config in pipeline (#1260)
* refactor(storybook): improve testing config in pipeline

* refactor: adjust timeout

--- a/packages/storybook/project.json
+++ b/packages/storybook/project.json
@@ -68,6 +68,13 @@
       },
       "defaultConfiguration": "headless",
       "configurations": {
+        "ci": {
+          "forbidOnly": true,
+          "headed": false,
+          "quiet": true,
+          "passWithNoTests": false,
+          "skipInstall": true
+        },
         "headless": {
           "headed": false
         },
