feat(ui-patterns): add functionality to patterns (#1240)
* feat: add functional react logic and externalize react

* refactor: make framework-agnostic by hiding react

* feat(ui-patterns): add dev mode support

* refactor(ui-patterns): split event registration logic

* refactor: format fix

* refactor: add onMount to useEffect dep. array

---------

Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "start:storybook": "nx run-many --target=start --projects=storybook,elements --output-style=stream",
     "start:landingpage": "nx run landingpage:start",
-    "start:ui-patterns": "nx run ui-patterns:dev",
-    "start:ui-patterns-playground": "nx run ui-patterns-playground:start",
+    "start:ui-patterns-playground": "nx run-many --target=start --projects=ui-patterns,ui-patterns-playground --output-style=stream",
     "build": "nx run-many --target=build --output-style=stream --exclude workspace",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci --exclude workspace",
     "test:core:watch": "nx run elements:test:watch",
