--- a/packages/ui-patterns/project.json
+++ b/packages/ui-patterns/project.json
@@ -5,6 +5,14 @@
   "sourceRoot": "packages/ui-patterns/src",
   "tags": [],
   "targets": {
+    "start": {
+      "executor": "nx:run-commands",
+      "outputs": ["{projectRoot}/dist"],
+      "options": {
+        "cwd": "packages/ui-patterns",
+        "commands": ["vite build --watch"]
+      }
+    },
     "build": {
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/dist"],
