--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -95,6 +95,6 @@
     "@types/css-font-loading-module": "^0.0.6",
     "@types/prosemirror-markdown": "1.5.6",
     "@types/resize-observer-browser": "^0.1.7",
-    "puppeteer": "^22.2.0"
+    "puppeteer": "~21.8.0"
   }
 }
