--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -80,8 +80,8 @@
     "@tiptap/extension-task-list": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
-    "autosize": "^4.0.2",
-    "classnames": "^2.2.6",
+    "autosize": "^4.0.4",
+    "classnames": "^2.3.2",
     "date-fns": "^2.16.1",
     "flatpickr": "^4.6.13",
     "tippy.js": "^6.2.3"
@@ -92,10 +92,9 @@
     "@stencil/react-output-target": "^0.5.3",
     "@stencil/sass": "^3.0.8",
     "@stencil/vue-output-target": "^0.8.7",
-    "@types/classnames": "^2.2.6",
     "@types/css-font-loading-module": "^0.0.6",
     "@types/prosemirror-markdown": "1.5.6",
     "@types/resize-observer-browser": "^0.1.7",
-    "puppeteer": "^21.11.0"
+    "puppeteer": "~21.8.0"
   }
 }
