--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@code-hike/mdx": "^0.7.4",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@inovex.de/elements-react": "^9.0.0",
     "@inovex.de/ui-patterns": "^9.0.0",
     "@mdx-js/loader": "^2.1.4",
@@ -15,6 +16,7 @@
     "countup.js": "^2.6.0",
     "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
+    "negotiator": "^0.6.3",
     "next": "13.5.1",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
@@ -27,6 +29,7 @@
     "shiki": "^0.14.5"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "18.8.3",
     "@types/react": "^18.2.15",
