--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -17,9 +17,9 @@
     "date-fns": "^2.29.3",
     "lodash-es": "^4.17.21",
     "negotiator": "^0.6.3",
-    "next": "13.5.1",
+    "next": "14.1.0",
     "next-mdx-remote": "^4.2.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
@@ -34,7 +34,7 @@
     "@types/node": "18.8.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "18.0.6",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "14.1.0",
     "next-html": "^0.1.1",
     "next-images": "^1.8.4",
     "sass": "^1.55.0",
