--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.3.0",
+    "typescript": "^4.9.5",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
