--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -37,6 +37,7 @@
     "eslint-config-next": "14.1.0",
     "next-html": "^0.1.1",
     "next-images": "^1.8.4",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "typescript": "~5.3.3"
   }
 }
