--- a/package.json
+++ b/package.json
@@ -22,20 +22,27 @@
     "clean:node-modules": "nx run-many --target=clean --configuration=nodejs --exclude workspace && shx rm -rf node_modules"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "~15.1.0",
-    "@angular/language-service": "~15.1.0",
-    "@nx/angular": "17.3.0-beta.8",
-    "@nx/devkit": "17.3.0-beta.8",
-    "@nx/eslint": "17.3.0-beta.8",
-    "@nx/eslint-plugin": "17.3.0-beta.8",
-    "@nx/playwright": "17.3.0-beta.8",
-    "@nx/storybook": "17.3.0-beta.8",
+    "@angular-devkit/build-angular": "~17.1.0",
+    "@angular-devkit/core": "~17.1.0",
+    "@angular-devkit/schematics": "~17.1.0",
+    "@angular-eslint/eslint-plugin": "~17.0.0",
+    "@angular-eslint/eslint-plugin-template": "~17.0.0",
+    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular/cli": "~17.1.0",
+    "@angular/compiler-cli": "~17.1.0",
+    "@angular/language-service": "~17.1.0",
+    "@nx/angular": "18.0.7",
+    "@nx/devkit": "18.0.7",
+    "@nx/eslint": "18.0.7",
+    "@nx/eslint-plugin": "18.0.7",
+    "@nx/js": "18.0.7",
+    "@nx/playwright": "18.0.7",
+    "@nx/storybook": "18.0.7",
     "@playwright/test": "^1.36.0",
+    "@schematics/angular": "~17.1.0",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/conventional-recommended-bump": "^9.0.3",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
@@ -43,6 +50,7 @@
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
+    "autoprefixer": "^10.4.0",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "conventional-changelog-angular": "^7.0.0",
@@ -58,35 +66,36 @@
     "jest": "29.7.0",
     "jest-cli": "29.7.0",
     "js-yaml": "^3.14.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "lint-staged": "^10.5.3",
-    "ng-packagr": "~15.1.0",
-    "nx": "17.3.0-beta.8",
+    "ng-packagr": "~17.1.0",
+    "nx": "18.0.7",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.6.2",
     "prompts": "^2.4.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.4",
+    "typescript": "~5.3.2",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
-    "@angular/animations": "~15.1.0",
-    "@angular/common": "~15.1.0",
-    "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
-    "@angular/forms": "~15.1.0",
-    "@angular/platform-browser": "~15.1.0",
-    "@angular/platform-browser-dynamic": "~15.1.0",
-    "@angular/router": "~15.1.0",
-    "rxjs": "~7.5.0",
+    "@angular/animations": "~17.1.0",
+    "@angular/common": "~17.1.0",
+    "@angular/compiler": "~17.1.0",
+    "@angular/core": "~17.1.0",
+    "@angular/forms": "~17.1.0",
+    "@angular/platform-browser": "~17.1.0",
+    "@angular/platform-browser-dynamic": "~17.1.0",
+    "@angular/router": "~17.1.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.3"
   },
   "workspaces": {
     "packages": [
