--- a/packages/elements-react/package.json
+++ b/packages/elements-react/package.json
@@ -39,8 +39,7 @@
     "@types/node": "^14.17.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
-    "@types/react-router": "^5.1.20",
-    "typescript": "^4.5.5"
+    "@types/react-router": "^5.1.20"
   },
   "peerDependencies": {
     "react": "^18.2.0",
