--- a/packages/landingpage/package.json
+++ b/packages/landingpage/package.json
@@ -34,7 +34,6 @@
     "eslint-config-next": "12.3.1",
     "next-html": "^0.1.1",
     "next-images": "^1.8.4",
-    "sass": "^1.55.0",
-    "typescript": "4.8.4"
+    "sass": "^1.55.0"
   }
 }
