--- a/packages/elements-angular/tsconfig.json
+++ b/packages/elements-angular/tsconfig.json
@@ -22,6 +22,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "disableTypeScriptVersionCheck": true
   }
 }
