--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nx/angular": "17.3.0-beta.8",
-    "@nx/devkit": "17.3.0-beta.8",
-    "@nx/eslint": "17.3.0-beta.8",
-    "@nx/eslint-plugin": "17.3.0-beta.8",
-    "@nx/playwright": "17.3.0-beta.8",
-    "@nx/storybook": "17.3.0-beta.8",
+    "@nx/angular": "18.0.7",
+    "@nx/devkit": "18.0.7",
+    "@nx/eslint": "18.0.7",
+    "@nx/eslint-plugin": "18.0.7",
+    "@nx/js": "18.0.7",
+    "@nx/playwright": "18.0.7",
+    "@nx/storybook": "18.0.7",
     "@playwright/test": "^1.36.0",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/conventional-recommended-bump": "^9.0.3",
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
@@ -60,19 +64,19 @@
     "js-yaml": "^3.14.0",
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
-    "nx": "17.3.0-beta.8",
+    "nx": "18.0.7",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.1.2",
+    "prettier": "^2.6.2",
     "prompts": "^2.4.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.4",
+    "typescript": "~5.3.2",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
@@ -84,9 +88,9 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.3"
   },
   "workspaces": {
     "packages": [
