--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -71,6 +71,7 @@
     "@material/tab-indicator": "^13.0.0",
     "@material/tab-scroller": "^13.0.0",
     "@material/textfield": "^13.0.0",
+    "@material/notched-outline": "^13.0.0",
     "@material/typography": "^13.0.0",
     "@stencil/core": "^4.12.2",
     "@tarekraafat/autocomplete.js": "^10.2.7",
