--- a/packages/elements-angular-example/project.json
+++ b/packages/elements-angular-example/project.json
@@ -76,7 +76,8 @@
           "packages/elements-angular-example/**/*.html"
         ]
       }
-    }
+    },
+    "clean": {}
   },
   "tags": []
 }
