--- a/packages/ui-patterns/project.json
+++ b/packages/ui-patterns/project.json
@@ -33,17 +33,6 @@
         }
       }
     },
-    "clean": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "packages/ui-patterns",
-        "command": "shx rm -rf dist"
-      },
-      "configurations": {
-        "nodejs": {
-          "command": "shx rm -rf node_modules"
-        }
-      }
-    }
+    "clean": {}
   }
 }
