--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "format": "nx format:check --exclude workspace",
     "format:fix": "nx format:write --exclude workspace",
     "qc": "yarn lint && yarn format && yarn build && yarn test",
-    "clean": "nx run-many --target=clean --exclude workspace && shx rm -rf dist",
-    "clean:node-modules": "nx run-many --target=clean --configuration=nodejs --exclude workspace && shx rm -rf node_modules"
+    "clean": "nx reset && nx run-many --target=clean && shx rm -rf node_modules",
+    "clean:dist": "nx reset && nx run-many --target=clean --configuration=dist",
+    "clean:node": "nx run-many --target=clean --configuration=node && shx rm -rf node_modules"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.1.0",
