--- a/project.json
+++ b/project.json
@@ -19,15 +19,15 @@
         "dryRun": {
           "args": "--releaseType=release --dryRun=true"
         }
-      },
-      "clean": {
-        "configurations": {
-          "dist": {
-            "commands": ["shx rm -rf ./dist ./.angular ./tmp"]
-          },
-          "node": {
-            "commands": ["echo"]
-          }
+      }
+    },
+    "clean": {
+      "configurations": {
+        "dist": {
+          "commands": ["shx rm -rf ./dist ./.angular ./tmp"]
+        },
+        "node": {
+          "commands": []
         }
       }
     }
