--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "format": "nx format:check",
     "format:fix": "nx format:write",
     "qc": "yarn lint && yarn format && yarn build && yarn test",
-    "clean": "nx reset && nx run-many --target=clean && shx rm -rf node_modules",
+    "clean": "nx run-many --target=clean && nx reset && shx rm -rf node_modules",
     "clean:dist": "nx reset && nx run-many --target=clean --configuration=dist",
-    "clean:node": "nx run-many --target=clean --configuration=node"
+    "clean:node": "nx run-many --target=clean --configuration=node && nx reset && shx rm -rf node_modules"
   },
   "nx": {
     "includedScripts": []
