implement review feedback

--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -63,6 +63,14 @@
         }
       }
     },
-    "clean": {}
+    "clean": {
+      "configurations": {
+        "dist": {
+          "commands": [
+            "shx rm -rf ./dist ./.stencil"
+          ]
+        }
+      }
+    }
   }
 }
