ci: deploy storybook in release workflow (#1325)
* improve deployment of storybook

* fix version specifier

* format:fix

* implement review feedback

--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -1,13 +1,25 @@
 name: 'Deploy Storybook'
 
 on:
-  push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_call:
+    inputs:
+      version:
+        description: Latest elements version in format v[0-9].[0-9].[0-9]
+        required: true
+        type: string
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Latest elements version in format v[0-9].[0-9].[0-9]
+        required: false
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      version: v${{ steps.version.outputs.current-version }}
+      isNew: v${{ steps.version-check.outputs.isNew }}
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/dependencies-install
@@ -15,10 +27,17 @@ jobs:
         run: yarn nx run storybook:build
         env:
           NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
-      - name: Upload Storybook artifact
-        uses: ./.github/workflows/artifacts-upload
+      - name: Upload Storybook artifact ⬆️
+        uses: actions/upload-artifact@v4
         with:
-          upload-storybook-artifact: true
+          name: storybook
+          path: packages/storybook/dist/
+      - name: Get current package version
+        id: version
+        uses: martinbeentjes/npm-get-version-action@v1.3.1
+      - name: Check for new version deployment
+        id: version-check
+        run: echo "isNew=${{ startsWith(inputs.version, 'v') }}" >> "$GITHUB_OUTPUT"
 
   deploy:
     needs: build
@@ -29,26 +48,25 @@ jobs:
         with:
           ref: pages
       - name: Download Storybook artifact
-        uses: dawidd6/action-download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: storybook
-          path: version/${{ github.ref_name }} # Push to the proper directory on gh pages branch.
-          check-artifacts: true # search in current workflow run
-          workflow-conclusion: 'in_progress' # need to change to in_progress, cause current workflow run is always running
+          path: version/${{ needs.build.outputs.isNew && inputs.version || needs.build.outputs.version }}
       - name: Provide latest symlink
-        if: ${{ ! contains( github.ref_name, '-' ) }} # only link to latest for releases (e.g. v7.0.0), not pre-releases (e.g. v.7.0.0-1)
-        run: cd version && rm -f latest && ln -s ${{ github.ref_name }} latest
+        if: needs.build.outputs.isNew
+        run: cd version && rm -f latest && ln -s ${{ inputs.version }} latest
         shell: bash
 
       # Crawls the version dir on current pages branch HEAD.
       # Jq extracts the directory name of the versions and transfers it to an array of the form ["0.1.1", "0.2.1"].
       - name: Update Hosted Versions
+        if: needs.build.outputs.isNew
         run: find ./version/* -type d -maxdepth 0 | cut -c 11- | jq -R -s -c 'split("\n")[:-1]' > ./hosted-versions.json
 
       - name: Deploy to Github Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.7
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: pages
-          commit-message: Deploying version ${{ github.ref_name }} 🚀
+          commit-message: ${{ needs.build.outputs.isNew && 'Deploying version ${{ inputs.version }} 🚀' || 'Update storybook' }}
           folder: '.'
           clean: false # Important to keep other versions.
