--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Check if there are changes
-        uses: NathanielHill/fail-if-changes@latest
+        uses: NathanielHill/fail-if-changes
       - name: Test all projects
         id: test_projects
         run: yarn test
