--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/js": "18.0.7",
+    "@nx/next": "18.0.7",
     "@nx/playwright": "18.0.7",
     "@nx/storybook": "18.0.7",
     "@playwright/test": "^1.36.0",
@@ -88,6 +89,9 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
