refactor: optimize clean up script for outputs and node_modules (#1321)
* enhance clean up script for all packages

* hide package json scripts

* run nx reset before cleaning root node_modules

* implement review feedback

* improve clean up

* format:fix

--- a/nx.json
+++ b/nx.json
@@ -26,6 +26,25 @@
         "{workspaceRoot}/.eslintrc.json"
       ]
     },
+    "clean": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "{projectRoot}",
+        "parallel": false,
+        "commands": [
+          "nx run {projectName}:clean:dist",
+          "nx run {projectName}:clean:node"
+        ]
+      },
+      "configurations": {
+        "dist": {
+          "commands": ["shx rm -rf ./dist"]
+        },
+        "node": {
+          "commands": ["shx rm -rf ./node_modules"]
+        }
+      }
+    },
     "@angular-devkit/build-angular:browser": {
       "cache": true,
       "dependsOn": ["^build"],
