--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -62,6 +62,13 @@
           "command": "svgo -f packages/elements/src/assets/ino-icon --config svgo.config.js"
         }
       }
+    },
+    "clean": {
+      "configurations": {
+        "dist": {
+          "commands": ["shx rm -rf ./dist ./.stencil"]
+        }
+      }
     }
   }
 }
