--- a/project.json
+++ b/project.json
@@ -20,6 +20,16 @@
           "args": "--releaseType=release --dryRun=true"
         }
       }
+    },
+    "clean": {
+      "configurations": {
+        "dist": {
+          "commands": ["shx rm -rf ./dist ./.angular ./tmp"]
+        },
+        "node": {
+          "commands": []
+        }
+      }
     }
   },
   "implicitDependencies": [
