--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -44,12 +44,14 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/elements/src/*.{ts,tsx}",
-          "packages/elements/scripts/*.{ts,tsx}",
-          "packages/elements/output-targets/*.{ts,tsx}"
-        ]
+      "defaultConfiguration": "check",
+      "configurations": {
+        "check": {
+          "fix": false
+        },
+        "fix": {
+          "fix": true
+        }
       }
     },
     "icons": {
