fix: fix global lint fix config

--- a/nx.json
+++ b/nx.json
@@ -24,7 +24,16 @@
         "^production",
         "{projectRoot}/.eslintrc.json",
         "{workspaceRoot}/.eslintrc.json"
-      ]
+      ],
+      "defaultConfiguration": "check",
+      "configurations": {
+        "check": {
+          "fix": false
+        },
+        "fix": {
+          "fix": true
+        }
+      }
     },
     "clean": {
       "executor": "nx:run-commands",
