--- a/packages/elements/.eslintrc.json
+++ b/packages/elements/.eslintrc.json
@@ -5,6 +5,7 @@
   "ignorePatterns": [
     "!**/*",
     "stencil.config.ts",
+    "setupSpecTests.ts",
     "node_modules/*",
     "dist/*"
   ],
@@ -27,6 +28,9 @@
         ]
       },
       "rules": {
+        "@stencil-community/ban-exported-const-enums": "off",
+        "@stencil-community/prefer-vdom-listener": "off",
+        "@stencil-community/reserved-member-names": "warn",
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-explicit-any": "off",
