--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,9 @@
         },
         "fix": {
           "fix": true
+        },
+        "ci": {
+          "quiet": true
         }
       }
     },
