--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "test:core:watch": "nx run elements:test:watch",
     "lint": "nx affected --target=lint --output-style=stream",
     "lint:fix": "nx affected --target=lint --configuration=fix --output-style=stream",
+    "lint:ci": "nx affected --target=lint --configuration=ci --output-style=stream",
     "format": "nx format:check",
     "format:fix": "nx format:write",
-    "qc": "yarn lint && yarn format && yarn build && yarn test",
+    "qc": "yarn lint:ci && yarn format && yarn build && yarn test",
     "clean": "nx run-many --target=clean && yarn clean:nx && shx rm -rf node_modules .nx",
     "clean:dist": "nx run-many --target=clean --configuration=dist && yarn clean:nx",
     "clean:node": "nx run-many --target=clean --configuration=node && yarn clean:nx && shx rm -rf node_modules",
