--- a/packages/ui-patterns/project.json
+++ b/packages/ui-patterns/project.json
@@ -22,16 +22,8 @@
       }
     },
     "lint": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "packages/ui-patterns",
-        "command": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
-      },
-      "configurations": {
-        "fix": {
-          "command": "eslint . --ext ts,tsx --fix --report-unused-disable-directives --max-warnings 0"
-        }
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "clean": {}
   }
