fix(elements-react): properly configure linting

--- a/packages/elements-react-example/project.json
+++ b/packages/elements-react-example/project.json
@@ -28,6 +28,10 @@
         }
       }
     },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
+    },
     "clean": {}
   }
 }
