fix(landingpage): fix dev mode

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
     "semver": "^7.5.4",
+    "serve": "^14.2.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
